--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "BreadCrumbs of all my works",
   "main": "index.js",
   "scripts": {
-    "compile:sass": "sass --watch scss:assests/css"
+    "compile:sass": "sass --watch scss:assets/css"
   },
   "repository": {
     "type": "git",
